--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="CSS/style.css">
 	<link rel="shortcut icon" href="IMG/ICONS/icon.png">
+	<script defer src="JS/script.js"></script>
 	<title>Portfolio(not mine)</title>
 </head>
 
@@ -200,8 +201,6 @@
 		</footer>
 
 	</div>
-	<script src="JS/jquery-3.6.0.min.js"></script>
-	<script src="JS/script.js"></script>
 </body>
 
 </html>
